--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,5 +24,5 @@ steps:
 - task: AzureRmWebAppDeployment@3
   inputs:
     azureSubscription: '<Azure service connection>'
-    WebAppName: '<Name of web app>'
+    WebAppName: 'Free Trial (1ea875eb-7ba1-465c-89ed-03ff4105b8eb)'
     Package: $(System.ArtifactsDirectory)/**/*.zip
